--- a/src/options.html
+++ b/src/options.html
@@ -2,13 +2,34 @@
 <html>
   <head>
     <link rel="stylesheet" href="./popup/popup.css">
+    <link rel="stylesheet" href="./../wwwroot/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="buttonDiv">
+    <div class="container">
+      <div class="text text-primary mt-4">
+        <p>Input keywords the bot should search for (highest-priority first)</p>
+      </div>
+      <!-- <div id="buttonDiv">
+      </div>
+      <div>
+        <p>Choose a different background color!</p>
+      </div> -->
+      <!-- <div id="keywords"></div> -->
+
+      <!-- <div id="keywords">
+        <input id="keyword" type="text" name="keyword" placeholder="Add a keyword (separated by commas)">
+        <button id="" class="button button-primary"></button>
+      </div> -->
+
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <button id="button" class="btn btn-primary" type="button">Save Changes</button>
+        </div>
+        <input id="keyword" type="text" name="keyword" class="form-control" placeholder="Add a keyword (separated by commas)">
+      </div>
+      <div id="success"></div>
     </div>
-    <div>
-      <p>Choose a different background color!</p>
-    </div>
+
     <script src="options.js"></script>
   </body>
 </html>
