- cleans up options.js - adds timeout to save success message

--- a/src/options.html
+++ b/src/options.html
@@ -5,29 +5,21 @@
     <link rel="stylesheet" href="./../wwwroot/css/bootstrap.min.css">
   </head>
   <body>
+
     <div class="container">
+
       <div class="text text-primary mt-4">
         <p>Input keywords the bot should search for (highest-priority first)</p>
       </div>
-      <!-- <div id="buttonDiv">
-      </div>
-      <div>
-        <p>Choose a different background color!</p>
-      </div> -->
-      <!-- <div id="keywords"></div> -->
-
-      <!-- <div id="keywords">
-        <input id="keyword" type="text" name="keyword" placeholder="Add a keyword (separated by commas)">
-        <button id="" class="button button-primary"></button>
-      </div> -->
 
       <div class="input-group mb-3">
         <div class="input-group-prepend">
-          <button id="button" class="btn btn-primary" type="button">Save Changes</button>
+          <button id="button" class="btn btn-primary" type="button">Save</button>
         </div>
         <input id="keyword" type="text" name="keyword" class="form-control" placeholder="Add a keyword (separated by commas)">
       </div>
       <div id="success"></div>
+
     </div>
 
     <script src="options.js"></script>
