--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,7 +11,7 @@
     
         <p>Launch the web crawler to do the Lord's work?</p>
     
-        <button id="launch-btn" class="launch-btn btn btn-danger">LET'S RIDE</button>
+        <button id="launch" class="btn btn-danger">LET'S RIDE</button>
     </div>
     <script src="popup.js"></script>
     <script src="./../wwwroot/js/bootstrap.bundle.min.js"></script>
