--- a/src/options.html
+++ b/src/options.html
@@ -14,7 +14,7 @@
 
       <div class="input-group mb-3">
         <div class="input-group-prepend">
-          <button id="button" class="btn btn-primary" type="button">Save</button>
+          <button id="save" class="btn btn-primary" type="button">Save</button>
         </div>
         <input id="keyword" type="text" name="keyword" class="form-control" placeholder="Add a keyword (separated by commas)">
       </div>
